[package]
name = "web-archive"
version = "0.1.0"
authors = ["David Young <david.young@nccgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]

[dependencies]
bytes = "1.0.1"
kuchiki = "0.8.1"
reqwest = "0.11.0"
url = "2.2.0"

[dev-dependencies]
tokio-test = "0.4.0"
