[package]
name = "web-archive"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sciguy16/web-archive"
description = "Download image, script, and CSS resources and embed them into a webpage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]

[dependencies]
base64 = "0.13.0"
bytes = "1.0.1"
html5ever = "0.25.1"
kuchiki = "0.8.1"
reqwest = "0.11.0"
url = "2.2.0"

[dev-dependencies]
tokio-test = "0.4.0"
