[package]
name = "dynamic_tests"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
rocket = "0.4.6"
tokio-test = "0.4.0"
url = "2.2.0"
web-archive = { path = "..", features = ["blocking"] }
